--- a/app-config.catalog.yaml
+++ b/app-config.catalog.yaml
@@ -1,4 +1,8 @@
 catalog:
+  import:
+    entityFilename: catalog-info.yaml
+  rules:
+    - allow: [API,Component,User,Group,Location,Resource,System,Template]
   # Overrides the default list locations from app-config.yaml as these contain example data.
   # See https://backstage.io/docs/features/software-catalog/#adding-components-to-the-catalog for more details
   # on how to get entities into the catalog.
