--- a/packages/backend/Dockerfile
+++ b/packages/backend/Dockerfile
@@ -9,7 +9,7 @@
 #
 # Once the commands have been run, you can build the image using `yarn build-image`
 
-FROM node:20-bookworm-slim
+FROM --platform=$BUILDPLATFORM node:20-bookworm-slim as base
 
 # Set Python interpreter for `node-gyp` to use
 ENV PYTHON=/usr/bin/python3
