--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -13,7 +13,8 @@
     "lint": "backstage-cli package lint",
     "test": "backstage-cli package test",
     "clean": "backstage-cli package clean",
-    "build-image": "docker build ../.. -f Dockerfile --tag iocanel/backstage"
+    "build-image": "DOCKER_BUILDKIT=1 docker buildx build --platform linux/amd64,linux/arm64 ../.. -f Dockerfile --tag quay.io/iocanel/backstage --output type=oci,dest=multiarch-image.tar",
+    "push-image": "DOCKER_BUILDKIT=1 docker buildx build --platform linux/amd64,linux/arm64 ../.. -f Dockerfile --tag quay.io/iocanel/backstage --push"
   },
   "dependencies": {
     "@backstage/backend-defaults": "^0.5.0",
