--- a/app-config.base.yaml
+++ b/app-config.base.yaml
@@ -14,6 +14,11 @@ backend:
   # all interfaces, the most permissive setting. The right value depends on your specific deployment.
   listen: ':7007'
 
+  # Allow reading from localhost
+  reading:
+    allow:
+      - host: 127.0.0.1
+      - host: localhost
 
   auth:
     # Used for enabling authentication, secret is shared by all backend plugins
