--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "build:backend": "yarn workspace backend build",
     "build:all": "backstage-cli repo build --all",
     "build-image": "yarn workspace backend build-image",
+    "build-image-linux": "yarn workspace backend build-image-linux",
     "push-image": "yarn workspace backend push-image",
     "tsc": "tsc",
     "tsc:full": "tsc --skipLibCheck false --incremental false",
